--- a/public/software/snake.html
+++ b/public/software/snake.html
@@ -79,6 +79,7 @@
         <div class="searchBar"></div>
         <div class="sideBar"></div>
         <div class="footer"></div>
+        <div class="utilities"></div>
     </div>
 
 <script>
