--- a/public/software/sudoku.html
+++ b/public/software/sudoku.html
@@ -43,11 +43,9 @@
             <!-- Enter main content elements here -->
             <h2>Sudoku ( C )</h2>
             <p>
-
                 <br>&nbsp;&nbsp;Contact administration for .exe program or github repo info
             </p>
-            <img
-                src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e0/Sudoku_Puzzle_by_L2G-20050714_standardized_layout.svg/250px-Sudoku_Puzzle_by_L2G-20050714_standardized_layout.svg.png">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e0/Sudoku_Puzzle_by_L2G-20050714_standardized_layout.svg/250px-Sudoku_Puzzle_by_L2G-20050714_standardized_layout.svg.png">
         
         </div>
 
@@ -75,6 +73,7 @@
         <div class="searchBar"></div>
         <div class="sideBar"></div>
         <div class="footer"></div>
+        <div class="utilities"></div>
     </div>
 
 <script>
