--- a/public/misc/notFound.html
+++ b/public/misc/notFound.html
@@ -60,6 +60,7 @@
         <div class="searchBar"></div>
         <div class="sideBar"></div>
         <div class="footer"></div>
+        <div class="utilities"></div>
     </div>
 
 <script>
