--- a/public/software/serverSoftware.html
+++ b/public/software/serverSoftware.html
@@ -36,9 +36,16 @@
             list-style-position: inside;
         }
         #serverHistory li {
-            color: rgb(18, 219, 18);
+            color: rgb(20, 220, 20);
             font-size: 20px;            
             padding: 5px;
+        }
+        #serverHistory li a {
+            text-decoration: none;
+            color: inherit;
+        }
+        #serverHistory li:hover {
+            color: black;
         }
         .featureList {
             list-style-position: inside;
@@ -54,6 +61,9 @@
         }
         #softwareServerProject {
             color: rgb(50,50,200);
+        }
+        #capstoneLink:hover, #softwareServerProject:hover {
+            color: rgb(20, 220, 20);
         }
     </style>
 
@@ -71,10 +81,10 @@
                     The backbone of this project has always been the NodeJS server. Originally, the server began on a BeagleboneBlack and has evolved many times to its current form on a Raspberry Pi 3. For a full hardware and project history, please visit the <a id="softwareServerProject" href="/projects/serverProject.html">servers project page</a>. 
                     <br>
                     <ul id="serverHistory">
-                        <li><a href="#softwareHomeHub" class="plainLink">The Home Hub</a></li>
-                        <li><a href="#softwareProjectPortfolio" class="plainLink">Project Portfolio</a></li>
-                        <li><a href="#softwareSmartLife" class="plainLink">Smart Life</a></li>
-                        <li><a href="#softwareCapstone" class="plainLink">Fanshawe Capstone</a></li>
+                        <li><a href="#softwareHomeHub" >The Home Hub</a></li>
+                        <li><a href="#softwareProjectPortfolio" >Project Portfolio</a></li>
+                        <li><a href="#softwareSmartLife" >Smart Life</a></li>
+                        <li><a href="#softwareCapstone" >Fanshawe Capstone</a></li>
                     </ul>
                     <br><br>
                 </p>
@@ -199,6 +209,7 @@
         <div class="searchBar"></div>
         <div class="sideBar"></div>
         <div class="footer"></div>
+        <div class="utilities"></div>
     </div>
 
 <script>
