--- a/public/software/software.html
+++ b/public/software/software.html
@@ -109,6 +109,7 @@
         <div class="searchBar"></div>
         <div class="sideBar"></div>
         <div class="footer"></div>
+        <div class="utilities"></div>
     </div>
 
 <script>
