--- a/template.html
+++ b/template.html
@@ -66,6 +66,7 @@
         <div class="searchBar"></div>
         <div class="sideBar"></div>
         <div class="footer"></div>
+        <div class="utilities"></div>
     </div>
 
 <script>
